--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -6,5 +6,6 @@
     class="absolute top-14 left-1/2 h-10 w-80 indent-3 text-lg font-bold !outline-none transform -translate-x-1/2 -translate-y-1/2 rounded-md shadow-md"
     (input)="onBusNameType($event)"
     (focus)="onBusNameFocus()"
+    (keyup.enter)="performSearch(true)"
   />
 </div>
