base modal for route selection

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-<div id="search-container" class="flex items-center justify-center h-screen">
+<div id="search-container" class="absolute top-0 left-0 w-screen flex items-center justify-center">
   <input
     #busStopSearchField
     type="text"
