--- a/src/app/components/route-modal/route-modal.component.html
+++ b/src/app/components/route-modal/route-modal.component.html
@@ -1,17 +1,34 @@
 <div
-  [class.hidden]="isModalOpen"
+  [class.hidden]="!isModalOpen"
   id="route-modal"
-  class="absolute top-0 left-0 w-screen h-screen flex justify-center items-center bg-black bg-opacity-50 z-10"
+  class="absolute top-0 left-0 w-screen h-screen flex justify-center items-center z-10"
 >
+  <!-- Modal Backdrop -->
+  <div
+    class="absolute top-0 left-0 w-screen h-screen bg-black bg-opacity-50"
+    (click)="setModalOpen(false)"
+  ></div>
+
   <!-- Modal Window -->
-  <div class="relative w-4/5 h-3/5 p-5 bg-slate-200 rounded-md shadow-lg select-none">
+  <div
+    class="relative w-4/5 h-3/5 p-5 bg-slate-200 rounded-md shadow-lg select-none"
+  >
     <!-- Modal Close Button -->
-    <div class="absolute top-0 right-0 p-2 z-10 cursor-pointer active:opacity-70">
-        <svg class="fill-slate-500" width="24" height="24" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
-            <path
-              d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
-            />
-          </svg>
+    <div
+      class="absolute top-0 right-0 p-2 z-10 cursor-pointer active:opacity-70"
+      (click)="setModalOpen(false)"
+    >
+      <svg
+        class="fill-slate-500"
+        width="24"
+        height="24"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 384 512"
+      >
+        <path
+          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
+        />
+      </svg>
     </div>
 
     <!-- Modal Contents -->
@@ -21,9 +38,11 @@
 
     <div class="h-3/4 flex justify-center flex-col overflow-y-auto">
       <button
-        class="h-1/6 my-2 rounded-lg bg-blue-400 text-white shadow-lg active:bg-blue-500 transition-all uppercase"
+        *ngFor="let route of routes"
+        class="h-20 my-2 rounded-lg bg-blue-400 overflow-hidden text-white shadow-lg active:bg-blue-500 transition-all uppercase"
+        (click)="onRouteSelect(route.RouteCode)"
       >
-        test
+        {{ route.RouteDescr }}
       </button>
     </div>
   </div>
