stop info panel base

--- a/src/app/components/route-modal/route-modal.component.html
+++ b/src/app/components/route-modal/route-modal.component.html
@@ -125,7 +125,7 @@
         class="w-10/12 h-12 my-2 px-2 rounded-lg bg-blue-400 overflow-hidden text-white shadow-xl active:bg-blue-500 hover:-translate-y-1 transition-all uppercase"
         (click)="onTimesSelect()"
       >
-        ARRIVAL / RETURN
+        DEPARTURES
       </button>
     </div>
 
