data fetching for stop time info panel

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,3 +1,5 @@
 <div style="width: 100vw; height: 100vh" id="map-container"></div>
 
-<div id="stop-info-panel"></div>
+<div *ngIf="isStopSelected" #stopInfoPanel id="stop-info-panel">
+    
+</div>
