--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,5 +1,21 @@
 <div style="width: 100vw; height: 100vh" id="map-container"></div>
 
-<div *ngIf="isStopSelected" #stopInfoPanel id="stop-info-panel">
-    
+<div
+  *ngIf="isStopSelected && selectedStopData"
+  class="absolute top-0 left-0 w-screen h-screen flex justify-center items-center select-none"
+  (click)="closeStopInfoModal()"
+>
+  <div
+    #stopInfoPanel
+    id="stop-info-panel"
+    class="bg-gray-600 bg-opacity-90 text-white rounded-lg p-4 z-10"
+  >
+    <h3 class="font-bold text-center animate-pulse motion-safe">
+      {{ selectedStopData.stopName }}
+    </h3>
+    <div *ngFor="let stopData of selectedStopData.stopTimes">
+      {{ stopData.busName }} -
+      <span class="font-bold">{{ stopData.busTime }}'</span>
+    </div>
+  </div>
 </div>
