--- a/src/app/components/route-modal/route-modal.component.scss
+++ b/src/app/components/route-modal/route-modal.component.scss
@@ -1,3 +1,9 @@
 .hidden {
-    display: none!important;
+  display: none !important;
+}
+
+.closest-arrival-time,
+.closest-return-time {
+  font-weight: bold;
+  font-size: 1.4rem;
 }
