--- a/src/app/components/route-modal/route-modal.component.html
+++ b/src/app/components/route-modal/route-modal.component.html
@@ -60,8 +60,9 @@
     <div
       [class.hidden]="currentMode != 'routeInfo'"
       class="w-full h-3/6 flex flex-col overflow-y-auto"
+      id="route-stops-container"
     >
-      <div *ngFor="let stop of stops" class="py-1">
+      <div *ngFor="let stop of stops" class="py-1" [class.next-stop-info]="stop.isNextStop">
         {{ stop.StopDescr }}
         <span class="text-sm font-bold"
           >{{ stop.ArrivalTime
